--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,8 +12,8 @@
         </ul>
 
         <div class="col-md-3 text-end">
-          <button type="button" class="btn btn-outline-primary me-2">Login</button>
-          <button type="button" class="btn btn-primary">Sign-up</button>
+          <button type="button" class="btn btn-outline-primary me-2">Sign Up</button>
+          <button type="button" class="btn btn-primary">Sign-In</button>
         </div>
     </header>
 </div>
