front-end finished

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,14 @@
-<h1>Hello world</h1>
+<div class="container-fluid container-fluid-custom py-md-2 mb-3">
+    <main>
+        <div class="py-md-5 mb-3 text-center d-flex justify-content-center">
+            <div class="col-md-12 col-lg-6 mb-4 mb-md-0 ">
+                <h1 class="display-2 fw-bold fs-1 mb-4 position-relative home-title">
+                    Write your thoughts as they come to you
+                </h1>
+                <p class="fs-0.8 mb-4">
+                    Notes is a simple to use free note taking app made with NodeJs, EJS and mongoDB.
+                </p>
+                <a href="/auth-google" class="btn btn-primary btn-lg fs-0.9">Try notes, it's Free</a>
+        </div>
+    </main>
+</div> 
