--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,15 +5,15 @@
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
-          <li><a href="#" class="nav-link px-2 link-dark">Features</a></li>
-          <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
-          <li><a href="/about" class="nav-link px-2 link-dark">About</a></li>
+          <li><a href="/" class="nav-link px-2 link-secondary fs-0.9">Home</a></li>
+          <li><a href="#" class="nav-link px-2 link-dark fs-0.9">Features</a></li>
+          <li><a href="#" class="nav-link px-2 link-dark fs-0.9">FAQs</a></li>
+          <li><a href="/about" class="nav-link px-2 link-dark fs-0.9">About</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
-          <button type="button" class="btn btn-outline-primary me-2">Sign Up</button>
-          <button type="button" class="btn btn-primary">Sign-In</button>
+          <a href="/auth/google" type="button" class="btn btn-outline-primary me-2">Sign Up</a>
+          <a href="/auth/google" class="btn btn-primary">Sign-In</a>
         </div>
     </header>
 </div>
