--- a/views/dashboard/view-notes.ejs
+++ b/views/dashboard/view-notes.ejs
@@ -12,19 +12,20 @@
         </nav>
         <div class="col d-flex justify-content-between align-item-center p-5" data-bs-toogle="modal" id="deleteButton" data-bs-target="#exampleModal">
             <h1 class="h3">View notes</h1>
-         <button type="button" class="btn btn-primary" data-toggle="modal" data-bs-target="#exampleModal">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-bs-target="#exampleModal">
            Delete
          </button>
         </div>
     </div>
     <section class="container" >
-        <form action="/users/update" method='post' style="width: 75%; margin-inline: 0; margin-block: 1rem; box-shadow: none; border-radius: 0.4rem; display: flex; justify-content: flex-start; flex-direction:column; width: 900px;">
+        <form action="/dashboard/item/<%=note._id%>" method='POST' style="width: 75%; margin-inline: 0; margin-block: 1rem; box-shadow: none; border-radius: 0.4rem; display: flex; justify-content: flex-start; flex-direction:column; width: 900px;">
           <div class="input-box">
             <input type="text" name="name" required style="border-color: none; border: 0; width: 100%;" value="<%= note.title%>"/>
+            <input type="text" style="display: none;" name="id" value="<%= note._id%>" >
           </div>
-          <textarea  name="n" id="textarea" cols="30" rows="10" style="border-color: none; border: 0; padding-block: 2rem; box-sizing: border-box;"><%= note.body%></textarea>
+          <textarea  name="body" id="textarea" cols="30" rows="10" style="border-color: none; border: 0; padding-block: 2rem; box-sizing: border-box;"><%= note.body%></textarea>
          
-          <button type="submit" style="width: 200px;">Update</button>
+          <button type="submit">Update</button>
         </form>
       </section>
 </section>
