--- a/views/dashboard/view-notes.ejs
+++ b/views/dashboard/view-notes.ejs
@@ -12,9 +12,10 @@
         </nav>
         <div class="col d-flex justify-content-between align-item-center p-5" data-bs-toogle="modal" id="deleteButton" data-bs-target="#exampleModal">
             <h1 class="h3">View notes</h1>
-          <a href="/note/<%=note._id%>" class="btn btn-primary" data-toggle="modal" data-bs-target="#exampleModal">
+            <form action="/note/<%=note._id%>?_method=DELETE" method="post"><button type="submit" class="btn btn-primary" data-toggle="modal" data-bs-target="#exampleModal">
            Delete
-          </a>
+          </button></form>
+          
         </div>
     </div>
     <section class="container" >
