--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -5,7 +5,7 @@
             <h1>Hey, <%= user.displayName%></h1>
         </div>
         <div class="text-end col">
-            <a href="/dashboard/add" class="btn btn-primary ">+ New Note</a>
+            <a href="/dashboard/addNote" class="btn btn-primary ">+ New Note</a>
         </div>
     </div>
     <div class="row ">
