--- a/views/dashboard/addNote.ejs
+++ b/views/dashboard/addNote.ejs
@@ -1,7 +1,7 @@
 <form action="/dashboard/item/add" method='POST' style="width: 75%; margin-inline: 2rem; margin-block: 1rem; box-shadow: none; border-radius: 0.4rem; display: flex; justify-content: flex-start; flex-direction:column; width: 900px;">
   
     <input type="text" name="name" placeholder="Title" required style="border-color: none; padding: 1rem;border: 0; width: 100%; margin-block-end: 1rem;"/>
-    <textarea  name="body" placeholder="This is all...." id="textarea" cols="30" rows="10" style="border-color: none; border: 0; padding-block: 2rem; box-sizing: border-box;"></textarea>
+    <textarea  name="body" type="text" placeholder="This is all...." id="textarea" cols="30" rows="10" style="border-color: none; border: 0; padding-block: 2rem; box-sizing: border-box;"></textarea>
    
     <button type="submit">Update</button>
   </form>
